--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,30 @@
 {
+	"name": "vunamhung/wptoolkit",
+	"description": "This is a toolkit for developing a plugin.",
+	"keywords": [
+		"wordpress",
+		"toolkit"
+	],
+	"homepage": "https://github.com/vunamhung/wptoolkit",
+	"license": "GPL-3.0+",
+	"support": {
+		"issues": "https://github.com/vunamhung/wptoolkit/issues",
+		"source": "https://github.com/vunamhung/wptoolkit"
+	},
+	"authors": [
+		{
+			"name": "Vu Nam Hung",
+			"email": "vunamhung@gmail.com",
+			"homepage": "https://github.com/vunamhung/",
+			"role": "Lead Developer"
+		}
+	],
+	"require": {
+		"php": ">=5.6.0"
+	},
+	"suggest": {
+		"composer/installers": "~1.0"
+	},
 	"autoload": {
 		"files": [
 			"bootstrap.php",
