--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
 	"autoload": {
 		"files": [
 			"bootstrap.php",
+			"helpers/theme.php",
 			"helpers/global.php",
 			"helpers/core.php",
 			"helpers/conditional.php",
